background,br white

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <title>Tareque's Personal Site</title>
 </head>
 
+<style>
+  body {
+    background: #EAF6F6
+  }
+
+  hr {
+    background-color: white;
+    border-style: none;
+    height: 1.5px;   
+  }
+</style>
+
 <body>
   <table cellspacing="30px">
     <tr>
